--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <html>
 
-<head>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
 
-</head>
+	<body>
 
-<body>
+		<div id="header">
 
-</body>
+			<h1>Liam Jarvis</h1>
+ 
+			<div id="text1">
+
+			</div>
+
+		</div>
+
+		<div id="main">
+
+			<h1>About</h1>
+
+			<div id="text2">
+
+			</div>
+
+		</div>
+
+		<div id="footer">
+
+			<h1>contact</h1>
+
+			<div id="text3">
+					<a href="http//:www.google.com">Google</a>
+			</div>
+
+		</div>
+
+	</body>
 
 </html>
